<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_dead_food"
        android:icon="@drawable/ic_ghost_brown"
        android:title="@string/wasted_label"
        android:textColor="@color/brown"/>

    <item
        android:id="@+id/menu_consumed_food"
        android:icon="@drawable/ic_done_all_brown_24dp"
        android:title="@string/consumed_label"
        android:textColor="@color/brown"/>

    <item
        android:id="@+id/menu_expiring_food"
        android:icon="@drawable/ic_hourglass_empty_brown_24dp"
        android:title="@string/expiring_label"
        android:textColor="@color/brown"/>

    <item
        android:id="@+id/menu_insert"
        android:icon="@drawable/ic_add_box_brown_24dp"
        android:title="@string/add_label"
        android:textColor="@color/brown"/>

</menu>