...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="205dp" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_rect_light_grey_today"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="2dp"
                android:fontFamily="@font/fredoka_one"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/save_btn_label"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
